# local-computing-messaging-service

./: .dockerignore  .env.template  .gitignore  README.md  build.sh  docker-compose.prod.yml  docker-compose.yml  nginx_config.conf  production_build.sh  requirements.txt  test.sh
.github/workflows/: google-cloudrun-docker.yml
message-service/: pyproject.toml
message-service/app/: main.py
message-service/app/api/: db.py  db_manager.py  messages.py  models.py
pet-service/: Dockerfile  prod.Dockerfile  pyproject.toml
pet-service/app/: config.py  main.py
pet-service/app/api/: auth.py  cat_api_adapter.py  db.py  db_manager.py  middleware.py  models.py  pets.py
pet-service/app/scripts/: dummy.py
pet-service/tests/: conftest.py  test_pets.py
