[tool.poetry]
name = "movie-service"
version = "0.1.0"
description = ""
authors = ["tianqizhao-louis <louiszhao0517@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
asyncpg = "^0.29.0"
databases = {extras = ["postgresql"], version = "^0.9.0"}
sqlalchemy = "^2.0.35"
httpx = "^0.27.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
